.jjconflict-side-1/apps/mautrix/whatsapp/overlays/nishir-tailnet/netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: mautrix-whatsapp-tailscale
spec:
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: tailscale-system
      ports:
        - port: http
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: mautrix-whatsapp
      app.kubernetes.io/name: mautrix-whatsapp
  policyTypes:
    - Ingress
